<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/temaniimagen"
        android:layout_marginTop="@dimen/marginbase"
        android:src="@drawable/calculator">

    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginbase"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/n1"
            android:textSize="@dimen/Tamañoletra">

        </TextView>

        <EditText
            android:id="@+id/N1Txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:textSize="@dimen/Tamañoletra">

        </EditText>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginbase"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/n2"
            android:textSize="@dimen/Tamañoletra">

        </TextView>

        <EditText
            android:id="@+id/N2Txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:textSize="@dimen/Tamañoletra">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginbase2"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/Tamañobtn"
            android:layout_marginLeft="38sp"
            android:layout_weight="1"
            android:background="@color/colorSuma"
            android:onClick="sumar"
            android:text="@string/plus"
            android:textColor="@color/primary_light"
            android:textSize="@dimen/Tamañoletra">


        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/Tamañobtn"
            android:layout_marginRight="38sp"
            android:layout_weight="1"
            android:background="@color/colorResta"
            android:onClick="restar"
            android:text="@string/menos"
            android:textColor="@color/primary_light"
            android:textSize="@dimen/Tamañoletra">

        </Button>


    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/Tamañobtn"
            android:layout_marginLeft="38sp"
            android:layout_weight="1"
            android:background="@color/colorMulti"
            android:onClick="multiplicar"
            android:text="@string/Multi"
            android:textColor="@color/primary_light"
            android:textSize="@dimen/Tamañoletra">


        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/Tamañobtn"
            android:layout_marginRight="38sp"
            android:layout_weight="1"
            android:background="@color/colorDiv"
            android:onClick="dividir"
            android:text="@string/Division"
            android:textColor="@color/primary_light"
            android:textSize="@dimen/Tamañoletra">

        </Button>


    </LinearLayout>

</LinearLayout>